--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,3 +148,34 @@ header .nav li:hover a {
 /* ====================================
 < !-- SIGN IN BAR END -- >
 ======================================= */
+/* ====================================
+< !-- SIGN UP BAR START -- >
+======================================= */
+.signup-bar {
+    width: 30.25rem !important;
+}
+.offcanvas-body {
+    padding: 4rem 3.5rem 0;
+}
+.signup-close {
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    font-size: 40px;
+}
+.signup-bar .form-control {
+    font-size: 18px;
+}
+.signup-btn {
+    border: 1px solid transparent;
+    background-color: var(--orange);
+    padding: 0.75rem 2.188rem;
+}
+.signup-btn:hover {
+    background-color: var(--white);
+    color: var(--orange);
+    border: 1px solid var(--orange);
+}
+/* ====================================
+< !-- SIGN UP BAR END -- >
+======================================= */
