--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,3 +179,35 @@ header .nav li:hover a {
 /* ====================================
 < !-- SIGN UP BAR END -- >
 ======================================= */
+/* ====================================
+< !-- HERO SECTION START -- >
+======================================= */
+.hero {
+    min-height: 100vh;
+    background-image: url('../img/hero-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.hero-content {
+    padding: 90px 1px 1px 100px;
+}
+.hero-content h1 {
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--white);
+}
+.hero-content p {
+    font-size: 16px;
+    font-weight: normal;
+    color: var(--white);
+}
+.seethebike {
+    color: var(--white) !important;
+    background-color: var(--black);
+    letter-spacing: 1px;
+    padding: 14px;
+}
+/* ====================================
+< !-- HERO SECTION END -- >
+======================================= */
