Added Top-links section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,3 +211,15 @@ header .nav li:hover a {
 /* ====================================
 < !-- HERO SECTION END -- >
 ======================================= */
+/* ====================================
+< !-- TOP LINKS  START -- >
+======================================= */
+.toplinks {
+    padding: 32px 15px;
+}
+.toplinks a:hover {
+    color: var(--orange);
+}
+/* ====================================
+< !-- TOP LINKS  END -- >
+======================================= */
