--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
 :root {
     --black: #000;
     --white: #fff;
@@ -5,6 +6,14 @@
     --transition02: all 0.2s linear;
     --transition03: all 0.3s linear;
     --transition05: all 0.5s linear;
+    --font-oswald: 'Oswald', sans-serif;
+    --font-roboto: 'Roboto', sans-serif;
+}
+.font-oswald {
+    font-family: var(--font-oswald);
+}
+.font-roboto {
+    font-family: var(--font-roboto);
 }
 .black {
     color: var(--black);
@@ -30,7 +39,6 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Oswald', sans-serif;
 }
 body, html {
     scroll-behavior: smooth;
@@ -67,6 +75,7 @@ header .nav li a {
     font-size: 17px;
 }
 header .nav li a {
+    font-size: 16px;
     color: var(--black) !important;
 }
 header .nav li:hover {
@@ -216,6 +225,9 @@ header .nav li:hover a {
 ======================================= */
 .toplinks {
     padding: 32px 15px;
+}
+.toplinks a {
+    font-size: 18px;
 }
 .toplinks a:hover {
     color: var(--orange);
