added footer logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,3 +314,15 @@ header .nav li:hover a {
 /* ====================================
 < !-- ANNIVERSARY END -- >
 ======================================= */
+/* ====================================
+< !-- FOOTER START -- >
+======================================= */
+.logo-2 {
+    width: 21.875rem;
+}
+.border-bot {
+    border-bottom: 0.5px solid #757575;
+}
+/* ====================================
+< !-- FOOTER END -- >
+======================================= */
