--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,23 @@ header .nav li:hover a {
 .border-bot {
     border-bottom: 0.5px solid #757575;
 }
+/* ===== DESKTOP ===== */
+footer .title {
+    font-size: 18px;
+}
+footer .sub-title {
+    padding: 15px 0;
+}
+footer .sub-title li {
+    padding: 0 0 8px 0;
+}
+footer .sub-title li a {
+    font-size: 16px;
+}
+.footer a:hover {
+    color: var(--white);
+    text-decoration: underline;
+}
 /* ====================================
 < !-- FOOTER END -- >
 ======================================= */
